@@ -8134,20 +8134,12 @@ void Client::Consume(const Item_Struct *item, uint8 type, int16 slot, bool auto_
 
     uint16 cons_mod = 180;
 
-    switch(GetAA(aaInnateMetabolism)){
-        case 1:
-            cons_mod = cons_mod * 110 * RuleI(Character, ConsumptionMultiplier) / 10000;
-            break;
-        case 2:
-            cons_mod = cons_mod * 125 * RuleI(Character, ConsumptionMultiplier) / 10000;
-            break;
-        case 3:
-            cons_mod = cons_mod * 150 * RuleI(Character, ConsumptionMultiplier) / 10000;
-            break;
-        default:
-            cons_mod = cons_mod * RuleI(Character, ConsumptionMultiplier) / 100;
-            break;
-    }
+	int16 metabolism_bonus = spellbonuses.Metabolism + itembonuses.Metabolism + aabonuses.Metabolism;
+
+	if (metabolism_bonus)
+		cons_mod = cons_mod * metabolism_bonus* RuleI(Character, ConsumptionMultiplier) / 10000;
+	else
+		 cons_mod = cons_mod * RuleI(Character, ConsumptionMultiplier) / 100;
 
    if(type == ItemTypeFood)
    {
